k8s/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
  labels:
    app: discounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: restaurantyacr2024.azurecr.io/restauranty-discounts-service:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
spec:
  type: ClusterIP
  selector:
    app: discounts
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
