k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.yorgos.site
      http:
        paths:
          - pathType: Prefix
            path: /api/auth
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/discounts
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
          - pathType: Prefix
            path: /api/items
            backend:
              service:
                name: items-service
                port:
                  number: 3003
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client-service
                port:
                  number: 80
