k8s/networkpolicy-discounts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-and-prometheus-to-discounts
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: discounts
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus

      ports:
        - protocol: TCP
          port: 3002
